make sure product images are 100% width on mobile

--- a/source/stylesheets/products.css.sass
+++ b/source/stylesheets/products.css.sass
@@ -29,6 +29,7 @@
 
       img
         max-width: 100%
+        width: 100%
 
     a
       display: block
